# kcii-audit-suite

./: .gitignore  CHANGELOG.md  PORTFOLIO.md  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.0.0rc1.md  RELEASE_NOTES_v1.0.0rc2.md  RELEASE_NOTES_v1.1.0.md  RELEASE_NOTES_v1.2.0.md  RELEASE_NOTES_v1.3.0.md  RELEASE_NOTES_v1.4.0.md  RELEASE_NOTES_v1.4.1.md  pyproject.toml
docs/: END_TO_END_SUPPORT_MATRIX.md  JUNOS_DISPLAY_INHERITANCE_DESIGN.md  MAINTENANCE_POLICY.md  NETWORK_OUTPUT_SANITIZATION.md  PROFILE_COVERAGE.md  PROJECT_COMPLETION.md  PUBLIC_READINESS.md  REALISTIC_LAB.md  RELEASE_CHECKLIST.md  V1_0_0RC2_READINESS.md  V1_0_0_READINESS.md  V1_1_0_READINESS.md  V1_2_0_READINESS.md  V1_3_0_READINESS.md  V1_4_0_READINESS.md  V1_4_1_READINESS.md
tests/: test_cli.py  test_dbms_live_docs.py  test_dbms_parsers.py  test_dbms_rulepack_completeness.py  test_end_to_end_support_matrix.py  test_linux_server.py  test_netlab_sim.py  test_network_cisco_ios.py  test_network_cisco_ios_realistic.py  test_network_junos.py  test_network_rulepack_completeness.py  test_network_vendor_regression.py  test_realistic_lab_docs.py  test_redactor.py  test_release_readiness.py  test_rulepack.py  test_security_advisory.py  test_unix_server_parser.py  (+7 more)
tools/kcii-netlab-sim/: README.md  pyproject.toml
tools/kcii-netlab-sim/src/kcii_netlab_sim/: __init__.py  __main__.py  cli.py  models.py  shell.py
tools/kcii-netlab-sim/src/kcii_netlab_sim/scenarios/: good.yaml  mixed.yaml  vulnerable.yaml
tools/kcii-netlab-sim/src/kcii_netlab_sim/vendors/: __init__.py  cisco_ios.py
(+168 files in other folders)
